@@ -5,9 +5,11 @@ errors.
 
 Anand Kumria		wildfire@progsoc.uts.edu.au
 Ariel T Glenn		ariel@columbia.edu
+Bryan Fullerton 	bryanf@samurai.com
 Brian Moore		bem@cmc.net
 Brian Warner		warner@lothar.com
 Caskey L. Dickson	caskey@technocage.com
+Cees van de Griend	cees-list@griend.xs4all.nl
 Charles Levert		charles@comm.polymtl.ca
 Christian von Roques	roques@pond.sub.org
 Christopher Oliver	oliver@fritz.traverse.net
