@@ -109,7 +109,7 @@ read_random_source( byte *buffer, size_t length, int level )
     static int initialized=0;
 
     if( !initialized ) {
-	log_info(_("warning: using insecure random number generator!!\n"));
+	log_info(_("WARNING: using insecure random number generator!!\n"));
 	tty_printf(_("The random number generator is only a kludge to let\n"
 		   "it compile - it is in no way a strong RNG!\n\n"
 		   "DON'T USE ANY DATA GENERATED BY THIS PROGRAM!!\n\n"));
